Use Base64 instead of DatatypeConverter
DatatypeConverter was used for Java 7 compatibility, but we decided to
require Java 8 since then.